###### TWE 4.4-1 RELEASED ######

2011-11-30 Sasa Bojanic <sasaboy@together.at>
   # Updated commons-io library to version 2.1
   # Updated itext5 to version 5.13
   # build procedure will now put the twe-patches and twe-restriction files to the proper places
     when such files should be generated for TXM

2011-10-26 Sasa Bojanic <sasaboy@together.at>
   # Copyright and Trademark sentences updated
   # No dependency targets and dependency output anymore

2011-10-18 Sasa Bojanic <sasaboy@together.at>
   # Project re-structured and build procedure updated to conform to the "components" standard

###### TWE 4.3-1 RELEASED ######
2011-09-29 Sasa Bojanic <sasaboy@together.at>   
   # LDAPPageSize option added to the configuration - now searches will not return partial results 
     because of LDAP server's size limit

###### TWE 4.2-1 RELEASED ######
2011-09-19 Sasa Bojanic <sasaboy@together.at>
   # Code modified to support WfXML access through HTTPS
   # TXM updated to version 1.2-1
   
2011-08-30 Sasa Bojanic <sasaboy@together.at>
   # try/catch blocks removed from build.xml files

2011-08-19 Sasa Bojanic <sasaboy@together.at>
   # build scripts corrected so the sources can be built if they are in the folder which contains spaces in the path

2011-07-22 Sasa Bojanic <sasaboy@together.at>
   # now only producing twe.zip for TWS dependency

2011-07-21 Sasa Bojanic <sasaboy@together.at>
   # now possible to manualy specify "buildid" configuration parameter (e.g. configure -buildid 20110721-0808)

###### TWE 4.1-1 RELEASED ######
2011-06-15 Sasa Bojanic <sasaboy@together.at>
   # improved recognizing of 32/64 bit Java versions when installing through NSIS setup

2011-05-24 Sasa Bojanic <sasaboy@together.at>
   # dependency output for TWS is now in the same folder structure as appears in TWS (tws/Shark/tools/twe)

2011-04-19 Sasa Bojanic <sasaboy@together.at>
   # TWE dependency output for TWS now also contains jxpdl.jar
   
2011-04-14 Sasa Bojanic <sasaboy@together.at>