@@ -82,11 +82,11 @@ public class NewStandardXPDLElementEditor extends JDialog implements JaWECompone
       return inlinePanel;
    }
 
-   public String getType() {
+   public String getComponentType() {
       return type;
    }   
 
-   public void setType(String type) {
+   public void setComponentType(String type) {
       this.type = type; 
    }
    
