@@ -83,11 +83,11 @@ public class TableEditor extends JDialog implements JaWEComponent {
       return null;
    }
 
-   public String getType() {
+   public String getComponentType() {
       return type;
    }
 
-   public void setType(String type) {
+   public void setComponentType(String type) {
       this.type = type;
    }
 
