@@ -144,11 +144,11 @@ public class PropertiesPanelComponent implements JaWEComponent, Observer {
       return inlinePanel;
    }
 
-   public String getType() {
+   public String getComponentType() {
       return type;
    }
 
-   public void setType(String type) {
+   public void setComponentType(String type) {
       this.type = type;
    }
 
