@@ -182,11 +182,11 @@ public class TransientPkgPool implements Observer, JaWEComponent, TreeSelectionL
        return panel.getDisplay();
     }
 
-    public String getType () {
+    public String getComponentType () {
        return type;
     }
 
-    public void setType (String type) {
+    public void setComponentType (String type) {
        this.type=type;
     }
 
