@@ -98,11 +98,11 @@ public class XPDLViewController implements Observer, JaWEComponent {
       return "XPDLComponent";
    }
    
-   public String getType() {
+   public String getComponentType() {
       return type;
    }   
 
-   public void setType(String type) {
+   public void setComponentType(String type) {
       this.type = type; 
    }
 
